Implement randomizer for selecting blocks when timeout and code review